fix: Fix a bug where maintenances weren't being properly fetched when getting by schedule
