# api/infra/http/docs/swagger.json
@@ -513,9 +513,6 @@
         "/api/v1/maintenance/scheduled": {
             "get": {
                 "description": "Get a list of scheduled maintenances based on the next maintenance due date",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -524,17 +521,6 @@
                 ],
                 "summary": "Get scheduled maintenances",
                 "operationId": "get-scheduled-maintenances",
-                "parameters": [
-                    {
-                        "description": "Next Maintenance Due Date",
-                        "name": "next_maintenance_due_date",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Successfully retrieved scheduled maintenances",
